<resources>
    <string name="app_name">Minesweeper</string>
    <string name="greetings">Please enter your board size:</string>
    <string name="board_size">Selected size: %1$sx%1$s</string>
    <string name="mines">Select number of mines: %1$s</string>
    <string name="play">PLAY!</string>
    <string name="mode">Mode: %1$s</string>
    <string name="new_game">New game</string>
    <string name="logo">Logo</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_to">Welcome to</string>
    <string name="start_game">Start game</string>
    <string name="show_leaderboard">Show leaderboard</string>
    <string name="logout">Logout</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="register">Register</string>
    <string name="button_image">Button image</string>
    <string name="rank">Rank</string>
    <string name="someone">Someone</string>
    <string name="score">Score</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="time_left">Time left: %1$s:%2$s</string>
    <string name="time_challenge">Time challenge: %1$s minutes</string>
</resources>
