<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    android:weightSum="100"
    android:layout_centerVertical="true"
    android:background="@drawable/bg_play">

  <uni.minesweeper.board.MinesweeperView
      android:id="@+id/minesweeperView"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="99" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="horizontal"
      android:weightSum="2"
      tools:ignore="NestedWeights">

    <ToggleButton
        android:id="@+id/btnToggleMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/mode" />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/new_game"
        tools:ignore="ButtonStyle" />
  </LinearLayout>

  <TextView
      android:id="@+id/timerView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAllCaps="true"
      android:text="@string/time_left"
      android:textAlignment="center"
      android:textColor="@color/colorPrimary"
      android:textStyle="bold" />
</LinearLayout>
