<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_menu">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginBottom="30dp"        />

    <com.github.nikartm.button.FitButton
        android:id="@+id/btnStartGame"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="20sp"
        android:layout_margin="16dp"
        android:gravity="center"
        app:fb_cornerRadius="10dp"
        app:fb_shape="rectangle"
        app:fb_textSize="26dp"
        app:fb_textStyle="bold"
        app:fb_text="@string/start_game"
        app:fb_backgroundColor="@color/buttonBg"
        app:fb_textColor="@color/buttonText" />

    <com.github.nikartm.button.FitButton
        android:id="@+id/btnLeaderboard"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/start_game"
        android:layout_marginBottom="20sp"
        android:layout_margin="16dp"
        android:gravity="center"
        app:fb_cornerRadius="10dp"
        app:fb_shape="rectangle"
        app:fb_textSize="26dp"
        app:fb_textStyle="bold"
        app:fb_text="@string/show_leaderboard"
        app:fb_backgroundColor="@color/buttonBg"
        app:fb_textColor="@color/buttonText" />

    <com.github.nikartm.button.FitButton
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/start_game"
        android:layout_marginBottom="20sp"
        android:layout_margin="16dp"
        android:gravity="center"
        app:fb_cornerRadius="10dp"
        app:fb_shape="rectangle"
        app:fb_textSize="26dp"
        app:fb_textStyle="bold"
        app:fb_text="@string/logout"
        app:fb_backgroundColor="@color/buttonBg"
        app:fb_textColor="@color/buttonText" />

</LinearLayout>