<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_intro">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/colorPrimary"
      android:shadowColor="@color/textShadow"
      android:shadowRadius="20"
      android:shadowDy="2"
      android:text="@string/greetings"
      android:textSize="@dimen/textSize"
      android:textAlignment="center"
      android:layout_marginTop="50dp"/>

  <com.ramotion.fluidslider.FluidSlider
      android:id="@+id/sizeSlider"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="30dp"
      materialdesign:size="small" />

  <TextView
      android:id="@+id/sizeTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/colorPrimary"
      android:shadowColor="@color/textShadow"
      android:shadowRadius="20"
      android:shadowDy="2"
      android:text="@string/board_size"
      android:textSize="25sp"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="20dp" />

  <TextView
      android:id="@+id/minesTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:shadowColor="@color/textShadow"
      android:shadowRadius="20"
      android:shadowDy="2"
      android:text="@string/mines"
      android:textSize="@dimen/textSize"
      android:textAlignment="center"
      android:layout_marginBottom="10dp"
      android:textColor="@color/colorPrimary" />

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center">

    <com.gc.materialdesign.views.ButtonFloat
        android:id="@+id/btnDecrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        materialdesign:iconDrawable="@drawable/ic_action_remove"
        materialdesign:animate="false" />

    <com.gc.materialdesign.views.ButtonFloat
        android:id="@+id/btnIncrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        materialdesign:iconDrawable="@drawable/ic_action_add"
        materialdesign:animate="false"
        android:layout_toEndOf="@id/btnDecrease"
        android:layout_marginStart="10dp" />
  </RelativeLayout>

  <com.gc.materialdesign.views.ButtonRectangle
      android:id="@+id/btnPlay"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/buttonBg"
      android:text="@string/play"
      android:layout_marginTop="40dp"
      android:layout_marginHorizontal="20dp"
      materialdesign:animate="false"
      android:textSize="10sp"
      tools:ignore="SmallSp" />


</LinearLayout>
